<resources>
    <string name="app_name">Multilingua</string>
    <string name="welcome">Bienvenue sur Multilingua</string>
    <string name="registration">S\'enregistrer</string>
    <string name="connexion">Se connecter</string>
    <string name="hint_lastname">Nom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_email">E-mail</string>
    <string name="err_msg_lastname">Entrer votre nom</string>
    <string name="err_msg_firstname">Entrer votre prénom</string>
    <string name="err_msg_password">Entrer votre mot de passe</string>
    <string name="err_msg_email">Entrer votre E-mail</string>
    <string name="err_msg_appointment_title">Vous devez entrer un nom</string>
    <string name="registration_title">Se créer un compte</string>
    <string name="btn_validate">Valider</string>
    <string name="connexion_title">Connectez-vous</string>
    <string name="title_activity_courses">Cours</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="header_firstname">Votre nom</string>
    <string name="header_email">Votre E-mail</string>
    <string name="mail">Envoyer un E-mail</string>
    <string name="disconnection">Déconnexion</string>
    <string name="other">Autre</string>
    <string name="courses">Cours</string>
    <string name="quiz">Quiz</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="btn_finish">Terminer</string>
    <string name="vrai">Vrai</string>
    <string name="faux">Faux</string>
    <string name="question"> </string>
    <string name="speaker">speaker</string>
    <string name="previous">Précedent</string>
    <string name="next">Suivant</string>
    <string name="answer">Réponse</string>
    <string name="appointment">Dates de formation</string>
    <string name="add_appointment">Ajouter une date</string>
    <string name="select_date">Date</string>
    <string name="select_time">Heure</string>
    <string name="validate_appointment">Valider</string>
    <string name="appointment_title">Nom de l\'évènement</string>
    <string name="delete_appointment">Supp.</string>
    <string name="category">Category</string>
</resources>
