<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_courses"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/quiz" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/mail" />
            <item
                android:id="@+id/nav_disconnection"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/disconnection" />
        </menu>
    </item>

</menu>
