<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </Space>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/btn_radio">
        <RadioButton android:id="@+id/radio_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vrai"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faux"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </Space>

    <Button
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_gravity="center"
        style="@style/buttonStyle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </Space>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/buttonStyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish"
            style="@style/buttonStyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>