<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connexion_title"
        android:id="@+id/title"
        android:textSize="22sp"
        android:gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="120dp" >
    </Space>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_email"
            android:hint="@string/hint_email"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:hint="@string/hint_password"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" >
    </Space>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_validate"
        android:id="@+id/btn_validate"
        android:layout_gravity="center"
        android:textSize="18sp" />

</LinearLayout>