<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="fr.oc.projet4.ocprojet4.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/welcome"
            android:id="@+id/welcome"
            android:layout_gravity="center"
            android:textSize="26sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/success_registration"
            android:text="@string/success_registration"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/registration"
            android:id="@+id/btn_registration"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/connexion"
            android:id="@+id/btn_connexion"
            android:layout_gravity="center"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>